--- a/EqUiWebUi/Views/Home/Settings.cshtml
+++ b/EqUiWebUi/Views/Home/Settings.cshtml
@@ -15,8 +15,8 @@
     </div>
     <div class="panel-body">
         <p><a href="~/Hangfire" class="btn btn-primary btn-sm">Hangfire &raquo;</a>Beheer van background jobs. </p>
-        <p><a href="~/Home/ConfiureBackgroundJobs" class="btn btn-danger btn-sm">Configure jobs &raquo;</a>Configure hangfire jobs. (reset al to default)</p>
-        <p><a href="~/Home/ConfiureBackgroundJobs" class="btn btn-warning btn-sm">Fire jobs &raquo;</a>Fire and forget hangfire jobs. </p>
+        <p><a href="~/Home/ConfiureBackgroundJobs" class="btn btn-danger btn-sm JQresultTriggerBtn">Configure jobs &raquo;</a>Configure hangfire jobs. (reset al to default)</p>
+        <p><a href="~/Home/ConfiureBackgroundJobs" class="btn btn-warning btn-sm JQresultTriggerBtn">Fire jobs &raquo;</a>Fire and forget hangfire jobs. </p>
     </div>
 </div>
 
@@ -61,7 +61,7 @@
         <p><a href="~/Alert/c_triggers/index" class="btn btn-danger btn-sm">c_trigger &raquo;</a>Manage alert triggers</p>
         <p><a href="~/Alert/h_alert/index" class="btn btn-danger btn-sm">h_alert &raquo;</a>Manager alerts</p>
         <hr />
-        <p><a href="~/Alert/Alert/configureHangfire" class="btn btn-warning btn-sm">configureHangfire &raquo;</a>configureHangfire</p>
+        <p><a href="~/Alert/Alert/configureHangfire" class="btn btn-warning btn-sm JQresultTriggerBtn">configureHangfire &raquo;</a>configureHangfire</p>
         <hr />
         <p><a href="~/Alert/Alert/Listalerts" class="btn btn-warning btn-sm">Listalerts &raquo;</a>Show list of alerts based on user</p>
         <hr />
