--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/Screenmaster.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/Screenmaster.cshtml
@@ -12,10 +12,10 @@
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
     <div class="panel-body">
-        <input id="ScreenMasterBtnFullRefresh" class="btn btn-warning JQresultTriggerBtn" type="button" value="FullRefresh" href="@Url.Action("FullRefresh")" />
+        <input id="ScreenMasterBtnFullRefresh" class="btn btn-warning JQresultTriggerBtn" type="button" value="FullRefresh" href="@Url.Action("FullRefresh", new { area = "user_management" })" />
         Send Refresh command to all screens. (full page reload)
         <p></p>
-        <input id="ScreenMasterBtnIframeRefresh" class="btn btn-warning JQresultTriggerBtn" type="button" value="IframeRefresh" href="@Url.Action("Refresh")" />
+        <input id="ScreenMasterBtnIframeRefresh" class="btn btn-warning JQresultTriggerBtn" type="button" value="IframeRefresh" href="@Url.Action("Refresh", new { area = "user_management" })" />
         Send refresh command to all screens (Iframe reload)
     </div>
 </div>
@@ -44,7 +44,7 @@
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
     <div class="panel-body">
-        <input id="ScreenMasterBtnSendUrl" class="btn btn-warning JQresultTriggerBtn" type="button" value="SendUrl" href="@Url.Action("DisplayPage", new { url = "http://equi", showtime = 10 })" />
+        <input id="ScreenMasterBtnSendUrl" class="btn btn-warning JQresultTriggerBtn" type="button" value="SendUrl" href="@Url.Action("DisplayPage", new {area = "user_management", url = "http://equi", showtime = 10 })" />
         Send url to all screens
     </div>
 </div>
