--- a/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
@@ -13,6 +13,7 @@
     columns.Add(c => c.c_triggers.alertType).Titled("alertType");
     columns.Add(c => c.C_timestamp).Titled("C_timestamp").Formatted("{0:dd-MM-yyyy HH:mm}");
     columns.Add(c => c.location).Titled("location");
+    columns.Add(c => c.alarmobject).Titled("alarmobject");
     columns.Add(c => c.info).Titled("info");
     columns.Add(c => c.c_state.state).Titled("state");
     columns.Add(c => c.id)
