--- a/EqUiWebUi/Areas/Alert/Views/Alert/_Details.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/_Details.cshtml
@@ -5,53 +5,61 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-    <div class="form-horizontal">
-        <hr />
-        <h4>Information about this alert (id:@Model.id)</h4>
-        <div class="form-group">
-            @Html.LabelFor(model => model.location, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DisplayFor(model => model.location, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.HelpTextFor(model => model.location)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.locationTree, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DisplayFor(model => model.locationTree, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.locationTree, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.info, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DisplayFor(model => model.info, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.HelpTextFor(model => model.info)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.C_timestamp, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DisplayFor(model => model.C_timestamp, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.HelpTextFor(model => model.C_timestamp)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @if (Model.comments == null)
-                {
-                    <h6 class='card-subtitle mb-2 text-muted'>no comments....</h6>
-                }
-                else
-                {
-                    @Html.Raw(Model.comments)
-                }
-            </div>
-
+<div class="form-horizontal">
+    <hr />
+    <h4>Information about this alert (id:@Model.id)</h4>
+    <div class="form-group">
+        @Html.LabelFor(model => model.location, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.location, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.HelpTextFor(model => model.location)
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.alarmobject, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.alarmobject, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.HelpTextFor(model => model.alarmobject)
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.locationTree, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.locationTree, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.locationTree, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.info, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.info, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.HelpTextFor(model => model.info)
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.C_timestamp, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.C_timestamp, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.HelpTextFor(model => model.C_timestamp)
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @if (Model.comments == null)
+            {
+                <h6 class='card-subtitle mb-2 text-muted'>no comments....</h6>
+            }
+            else
+            {
+                @Html.Raw(Model.comments)
+            }
+        </div>
+
+    </div>
+</div>
