--- a/EqUiWebUi/Areas/Alert/Views/h_alert/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/h_alert/Edit.cshtml
@@ -47,6 +47,14 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.alarmobject, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.alarmobject, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.alarmobject, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.locationTree, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.locationTree, new { htmlAttributes = new { @class = "form-control" } })
