--- a/EqUiWebUi/Areas/Alert/Views/h_alert/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/h_alert/Index.cshtml
@@ -13,12 +13,13 @@
     columns.Add(c => c.c_triggers.alertType).Titled("alertType");
     columns.Add(c => c.C_timestamp).Titled("C_timestamp").Formatted("{0:dd-MM-yyyy HH:mm}");
     columns.Add(c => c.location).Titled("location");
+    columns.Add(c => c.alarmobject).Titled("alarmobject");
     columns.Add(c => c.info).Titled("info");
     columns.Add(c => c.c_state.state).Titled("state");
     columns.Add(c => c.id)
                 .Titled("")
                 .Encoded(false)
-                .RenderedAs(c => @Html.ActionLink("EditUser", "Edit","Alert", new { id = c.id },null) + " | " + 
+                .RenderedAs(c => @Html.ActionLink("EditUser", "Edit","Alert", new { id = c.id },null) + " | " +
                                  @Html.ActionLink("EditAdmin", "Edit", new { id = c.id }) + " | " +
                                  @Html.ActionLink("Delete", "Delete", new { id = c.id })
                 ).Filterable(false);
