--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -139,6 +139,13 @@
             <a href="~/Spc/index" class="btn btn-primary btn-sm">SPC &raquo;</a>
             Spc index
         </p>
-   
+
+        <p>
+            <a href="pan style='font-size:1.0pt;font-family:"Times New Roman",serif;
+mso-fareast-font-family:SimSun;mso-fareast-theme-font:minor-fareast;mso-ansi-language:
+EN-GB;mso-fareast-language:ZH-CN;mso-bidi-language:AR-SA'><a
+href="https://mysite.volvocars.net/:o:/r/personal/ldebuck2_volvocars_com/Documents/Notebooks/9h%20meeting?d=w586803fbf1694a8da233cc3ea65a12c8&amp;e=5%3A23ae5acd21854d77941a15f2e5d04225" class="btn btn-primary btn-sm">Onenote &raquo;</a>
+        </p>
+
     </div>
 </div>
