--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -4,6 +4,13 @@
     <h5>(data update gebeurd nog NIET automatisch)</h5>
     <h5>(gebruik user: e6308159 pw: e6308159 om in te loggen in tableau)</h5>
     <h3>Welja ...misschien ooit als IT eindelijk die account aanmaakt... INC1939274 </h3>
+    <hr />
+    <h3>Gekende problemen</h3>
+    Als tableau hier niet automatisch geladen wordt (grijs scherm)
+    Ga naar https://tableau-test.volvocars.biz en log daar eerst in. 
+
+    Als de 'maximo' tools in tableau niet automatisch laden. 
+    Ga naar https:\\equi en probeer langs deze weg.
 </div>
 
 <div>
