--- a/EqUiWebUi/Views/Chart/Index.cshtml
+++ b/EqUiWebUi/Views/Chart/Index.cshtml
@@ -11,7 +11,7 @@
                 Chart index
             </p>
 
-            @Html.Partial("_getErrorTrend")
+            This does nothing
 
         </div>
     </div>
