--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -148,6 +148,7 @@
         })
     </script>
     @RenderSection("scripts", required: false)
+    @RenderSection("partials", required: false)
 </body>
 </html>
 
