--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -54,6 +54,12 @@
                 <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTree" class="btn btn-primary btn-sm">ObjectTree &raquo;</a>
                 Boommap met aantal storingen
             </p>
+
+            <p>
+                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=DressByFault" class="btn btn-primary btn-sm">Dress Fouten &raquo;</a>
+                Boommap met dressproblemen per fout type 
+            </p>
+
         </div>
     </div>
     <p></p>
