--- a/EqUiWebUi/Areas/Gadata/Views/Table/MoreInfo.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/MoreInfo.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model EqUiWebUi.Models.LogInfo
 @{
     ViewBag.Title = "MoreInfo";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,3 +6,7 @@
 
 <h2>MoreInfo</h2>
 
+<!--putting this in a section this only renders onces the page is loaded-->
+@section partials{
+    @Html.Partial("_Moreinfo", Model)
+}
