--- a/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
@@ -15,20 +15,22 @@
     columns.Add(c => c.c_triggers.alertType).Titled("alertType").Filterable(true);
     columns.Add(c => c.info).Titled("info");
     columns.Add(c => c.AcceptUser.username.Replace(@"VCCNET\", "")).Titled("AcceptUser").Filterable(true);
-//render dropdown to set alert status
-columns.Add(c => c.c_state.state)
-   .Titled("AlertStatus")
-   .Encoded(false)
-   .Filterable(true)
-   .RenderedAs(c => "TO BE IMPLEMENTED");
+    columns.Add(c => c.triggerCount).Titled("TC").Filterable(true);
+    //render dropdown to set alert status
+    columns.Add(c => c.c_state.state)
+           .Titled("State")
+           .Encoded(false)
+           .Filterable(true)
+           .RenderedAs(c => @MyFilters.ChangeAlertStatus(c.id, c.c_state.state));
 
-//launch sbcu tool
-columns.Add(c => c)
+    //launch sbcu tool
+    columns.Add(c => c)
                   .Encoded(false)
                   .Filterable(false)
                   .Sortable(false)
                   //gefoefel om de tool id er uit te halen! Dit kan falen als er geen 'gun:' in de omschrijving zit dus is ROMMEL code
                   .RenderedAs(c => MyEquiToolkit.SbcuTool(c.location, c.info.Substring(c.info.IndexOf("gun:"), 5).Replace("gun:", "")));
+    //add edit button
     columns.Add(c => c)
                 .Titled("")
                 .Encoded(false)
@@ -36,7 +38,7 @@ columns.Add(c => c)
                 ).Filterable(false);
 }).Filterable(true).Sortable(true).Pageable(pager =>
 {
-    pager.RowsPerPage = 20;
+    pager.RowsPerPage = 7;
 }).Empty("Did not find anything").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleStatus(row.c_state.state))
 
 <p></p>
