--- a/EqUiWebUi/Areas/Gadata/Views/Shared/_Moreinfo.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Shared/_Moreinfo.cshtml
@@ -16,39 +16,8 @@
 <div class="modal-body">
     @Html.Partial("../Chart/_getErrorTrend", Model)
 
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h4 class="panel-title">@Model.logtype details for logcode: @Model.errornum  logtext: @Model.logtext</h4>
-            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
-        </div>
-        <div class="panel-body">
-            @Html.Raw(Model.logDetails)
-        </div>
-    </div>
+    @Html.Action("_loginfo", Model)
 
     @Html.Action("_workordersOnLocation", "Workorder", new { area = "Maximo_ui", location = Model.location })
 
 </div>
-
-<div class="modal-footer">
-        <h4 class="modal-title">These tools might also proof useful</h4>
-        <p>
-            @if (Model.logtype == "ALERT" || Model.location.Contains("WS") || Model.location.Contains("JG") || Model.location.Contains("WT"))
-            {
-                MyEquiToolkit.SbcuTool(Model.location);
-            }
-
-            @if (Model.location != "")
-            {
-                MyEquiToolkit.MaximoToolPgaGeo(Model.location);
-                MyEquiToolkit.MaximoToolWorkoders(Model.location);
-                MyEquiToolkit.MaximoToolParts(Model.location);
-            }
-
-            @if (Model.errornum.ToString() != "" && (Model.logtype == "BREAKDOWN" || Model.logtype == "ERROR" || Model.logtype == "WARNING"
-                   || Model.logtype == "ControllerEvent" || Model.logtype == "ErrDispLog" || Model.logtype == "SHIFTBOOK"))
-            {
-                MyEquiToolkit.ErrorTrentTool(Model.location, Model.logtype, Model.errornum, Model.logtext);
-            }
-        </p>
-    </div>
