--- a/EqUiWebUi/Areas/Gadata/Views/Table/_EQpluginDefaultNGAC.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_EQpluginDefaultNGAC.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Models.EQpluginDefaultNGAC_Result>
+﻿@model IEnumerable<EqUiWebUi.Areas.Gadata.Models.EQpluginDefaultNGAC_Result>
 
 @Html.Grid(Model).Named("EQpluginDefaultNGAC").Build(columns =>
 {
