--- a/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Models.Supervisie>
+﻿@model IEnumerable<EqUiWebUi.Areas.Gadata.Models.Supervisie>
 
 @Html.Grid(Model).Named("Supervisie").Build(columns =>
 {
