--- a/EqUiWebUi/Areas/Gadata/Views/Table/BodyTrackWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/BodyTrackWebgrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model IQueryable<EqUiWebUi.Models.Bodytracking>
+﻿@model IQueryable<EqUiWebUi.Areas.Gadata.Models.Bodytracking>
 @{
     ViewBag.Title = "BodyTrackWebgrid";
     Layout = "~/Views/Shared/_Layout.cshtml";
