--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -7,10 +7,10 @@
     <hr />
     <h3>Gekende problemen</h3>
     Als tableau hier niet automatisch geladen wordt (grijs scherm)
-    Ga naar https://tableau-test.volvocars.biz en log daar eerst in. 
+    Ga naar <a href="https://tableau-test.volvocars.biz" class="btn btn-primary btn-sm">Tableau server &raquo;</a> en log daar eerst in.
 
-    Als de 'maximo' tools in tableau niet automatisch laden. 
-    Ga naar https:\\equi en probeer langs deze weg.
+    Als de 'maximo' tools in tableau niet automatisch laden.
+    Ga naar <a href="https://equi" class="btn btn-primary btn-sm">https equi &raquo;</a>en probeer langs deze weg.
 </div>
 
 <div>
