--- a/EqUiWebUi/App_Code/MyEquiToolkit.cshtml
+++ b/EqUiWebUi/App_Code/MyEquiToolkit.cshtml
@@ -3,14 +3,18 @@
     {
 
         string urlSbcu = string.Format("http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&target={0}", @Uri.EscapeDataString(gunname));
-        <a href="@urlSbcu" class="btn-xs btn-success" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">Data &raquo;</a>
+        <a href="@urlSbcu" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">
+            <i class="glyphicon glyphicon-stats"></i>
+        </a>
 }
 
 @helper SbcuTool(string controllername, string toolId)
     {
 
         string urlSbcu = string.Format("http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&Controller={0}&Toolid={1}", @Uri.EscapeDataString(controllername), toolId);
-        <a href="@urlSbcu" class="btn-xs btn-success" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">Data &raquo;</a>
+        <a href="@urlSbcu" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">
+            <i class="glyphicon glyphicon-stats"></i>
+        </a>
 }
 
 
