--- a/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
@@ -5,13 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index of all alerts for this user (AASPOT)</h2>
+<h2>Index of all alerts AASPOT</h2>
+@if (ViewBag.LocationFilter != null)
+{
+<h3>Filtered on location: @ViewBag.LocationFilter</h3>
+<h4>This location has @ViewBag.AlertCount alerts in his history</h4>
+}
 
 @Html.Grid(Model).Named("h_alert").Build(columns =>
 {
-    columns.Add(c => c.id).Titled("id").Filterable(true);
+    columns.Add(c => c.id).Titled("id").Filterable(true).InitialSort(GridSortOrder.Desc);
     columns.Add(c => c.location).Titled("location").Filterable(true);
-    columns.Add(c => c.C_timestamp).Titled("C_timestamp").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
+    columns.Add(c => c.C_timestamp).Titled("C_timestamp").Formatted("{0:dd-MM-yyyy HH:mm}");
     columns.Add(c => c.c_triggers.alertType).Titled("alertType").Filterable(true);
     columns.Add(c => c.info).Titled("info");
     columns.Add(c => c.AcceptUser.username.Replace(@"VCCNET\", "")).Titled("AcceptUser").Filterable(true);
@@ -30,15 +35,24 @@
                   .Sortable(false)
                   //gefoefel om de tool id er uit te halen! Dit kan falen als er geen 'gun:' in de omschrijving zit dus is ROMMEL code
                   .RenderedAs(c => MyEquiToolkit.SbcuTool(c.location, c.info.Substring(c.info.IndexOf("gun:"), 5).Replace("gun:", "")));
+
+    //add filterbutton
+    columns.Add(c => c)
+                .Titled("")
+                .Encoded(false)
+                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("AASPOTAlertList", new { LocationFilter = c.location }), "glyphicon glyphicon-filter", "","Filter alerts for this location")
+                ).Filterable(false);
+
     //add edit button
     columns.Add(c => c)
                 .Titled("")
                 .Encoded(false)
-                .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
+                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "glyphicon glyphicon-pencil", "", "Edit this alert")
                 ).Filterable(false);
+
 }).Filterable(true).Sortable(true).Pageable(pager =>
 {
-    pager.RowsPerPage = 7;
+    pager.RowsPerPage = 15;
 }).Empty("Did not find anything").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleStatus(row.c_state.state))
 
 <p></p>
