--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -61,11 +61,11 @@
         </p>
 
         @{
-        string urlGreenfieldsuperVis = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieCma/");
-        <p>
-            <a href="~/Home/Rendersite?url=@urlGreenfieldsuperVis" class="btn btn-primary btn-sm">Tia supervisie index &raquo;</a>
-            Elk beschikbaar scherm van CMA supervisie.
-        </p>
+            string urlGreenfieldsuperVis = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieCma/");
+            <p>
+                <a href="~/Home/Rendersite?url=@urlGreenfieldsuperVis" class="btn btn-primary btn-sm">Tia supervisie index &raquo;</a>
+                Elk beschikbaar scherm van CMA supervisie.
+            </p>
         }
     </div>
 </div>
@@ -81,6 +81,20 @@
         <p>
             <a href="~/Tableau/index" class="btn btn-primary btn-sm">Tableau &raquo;</a>
             Een interactive manier om naar data te kijken.
+        </p>
+    </div>
+</div>
+
+<p></p>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4 class="panel-title">Alerts</h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+    </div>
+    <div class="panel-body">
+        <p>
+            <a href="~/Alert/Alert/Index" class="btn btn-primary btn-sm">Index &raquo;</a>
         </p>
     </div>
 </div>
