--- a/EqUiWebUi/Views/Home/Settings.cshtml
+++ b/EqUiWebUi/Views/Home/Settings.cshtml
@@ -62,9 +62,7 @@
         <hr />
         <p><a href="~/Alert/Alert/configureHangfire" class="btn btn-warning btn-sm JQresultTriggerBtn">configureHangfire &raquo;</a>configureHangfire</p>
         <hr />
-        <p><a href="~/Alert/Alert/Listalerts" class="btn btn-warning btn-sm">Listalerts &raquo;</a>Show list of alerts based on user</p>
-        <p><a href="~/Alert/Alert/AASPOTAlertList" class="btn btn-warning btn-sm">AASPOTalerts &raquo;</a>Show list of alerts based on AASPOT</p>
-        <p><a href="~/Alert/Alert/AASPOTAlertList?ActiveAlertOnly=true" class="btn btn-warning btn-sm">AASPOTalerts Openalerts &raquo;</a>AASPOT OPEN</p>
+        <p><a href="~/Alert/Alert/Index" class="btn btn-primary btn-sm">Main user index &raquo;</a>Index</p>
         <hr />
         <p><a href="~/Alert/c_SMSsystem/index" class="btn btn-warning btn-sm">c_SMSsystem &raquo;</a></p>
         <p><a href="~/Alert/c_SMSconfig/index" class="btn btn-warning btn-sm">c_SMS_config &raquo;</a></p>
