--- a/EqUiWebUi/Views/Home/Settings.cshtml
+++ b/EqUiWebUi/Views/Home/Settings.cshtml
@@ -16,6 +16,7 @@
     <div class="panel-body">
         <p><a href="~/Hangfire" class="btn btn-primary btn-sm">Hangfire &raquo;</a>Beheer van background jobs. </p>
         <p><a href="~/Home/ConfiureBackgroundJobs" class="btn btn-danger btn-sm JQresultTriggerBtn">Configure jobs &raquo;</a>Configure hangfire jobs. (reset al to default)</p>
+        <p><a href="~/HanfireArea/job/MakeJob" class="btn btn-danger btn-sm">Make job &raquo;</a>Make hangfire jobs.</p>
     </div>
 </div>
 
@@ -68,6 +69,16 @@
         <p><a href="~/Alert/c_SMSconfig/index" class="btn btn-warning btn-sm">c_SMS_config &raquo;</a></p>
         <p><a href="~/Alert/c_CPT600/index" class="btn btn-warning btn-sm">c_CPT600 &raquo;</a></p>
 
+    </div>
+</div>
+
+<div class="panel panel-danger">
+    <div class="panel-heading">
+        <h4 class="panel-title">TOOLS</h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+    </div>
+    <div class="panel-body">
+        <p><a href="http://gensvw1051:5601/app/kibana#/discover?_g=()" class="btn btn-danger btn-sm">Kibana &raquo;</a></p>
     </div>
 </div>
 
