--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
@@ -88,13 +88,18 @@ else
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Pollrate, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Cron, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Pollrate, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Pollrate, "", new { @class = "text-danger" })
-                        @Html.HelpTextFor(model => model.Pollrate)
+                        <div id="jCron"></div>
+                        <p></p>
+                        <div>
+                            <input class="form-control text-box single-line" id="Cron" name="Cron" type="text" value="">
+                        </div>
+                        @Html.ValidationMessageFor(model => model.Cron, "", new { @class = "text-danger" })
+                        @Html.HelpTextFor(model => model.Cron)
                     </div>
                 </div>
+
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.AutoSetStateTechComp, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -165,16 +170,30 @@ else
 
 
 @section scripts{
-    //http://codemirror.net/doc/manual.html
+    @*http://codemirror.net/doc/manual.html*@
     <script src="~/Scripts/Codemirror/codemirror.js"></script>
     <link href="~/Content/codemirror/codemirror.css" rel="stylesheet" />
     <link href="~/Content/codemirror/neat.css" rel="stylesheet" />
     <script src="~/Scripts/Codemirror/mode/sql.js"></script>
+
+    @*http://shawnchin.github.io/jquery-cron/*@
+    <link href="~/Content/jquery-cron.css" rel="stylesheet" />
+    <link href="~/Scripts/gentleSelect/jquery-gentleSelect.css" rel="stylesheet" />
+    <script src="~/Scripts/gentleSelect/jquery-gentleSelect.js"></script>
+    <script src="~/Scripts/jquery-cron.js"></script>
+
     <script>
         var sqlCodeMirror = CodeMirror.fromTextArea(document.getElementById("sqlStqStatement"), {
             lineNumbers: true,
             mode: "sql",
             theme: "neat"
+        });
+
+        $('#jCron').cron({
+            initial: "@(Model.Cron == null ? "0 * * * *" : Model.Cron)",
+            onChange: function () {
+                $('#Cron').val($(this).cron("value"));
+            }
         });
     </script>
 }
